@@ -396,6 +396,10 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/unixhelper.h: style and general fixes within comments.
     - src/unixhelper.{cpp,h}: split off core functionality of kill_pgroup ()
       into a new function called real_kill_pgroup ().
+    - src/unixhelper.{cpp,h}: rewrite kill_pgroup () to act as a wrapper
+      around real_kill_pgroup (). Adjust comment. We need to do this so the
+      cleanup process doesn't kill itself before all other processes in the
+      process group are killed.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
